<?xml version="1.0"?>
<package>
  <name>langs-dev</name>
  <version>0.2.8</version>
  <description>Meta package modeling the build-time dependencies for language bindings of messages.</description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/ros/langs-dev/issues</url>
  <url type="repository">https://github.com/ros/langs-dev</url>

  <build_depend>catkin</build_depend>

  <!-- provide the generators to wet downstream packages -->
  <run_depend>message_generation</run_depend>

  <export>
    <deprecated>Instead build_depend on message_generation and run_depend on message_runtime</deprecated>
  </export>
</package>
